--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -192,7 +192,7 @@ p, li { white-space: pre-wrap; }
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="setupSettingsTab">
        <attribute name="title">
@@ -415,9 +415,9 @@ p, li { white-space: pre-wrap; }
        <widget class="QLabel" name="horizontalSliderLabel">
         <property name="geometry">
          <rect>
-          <x>290</x>
+          <x>130</x>
           <y>20</y>
-          <width>81</width>
+          <width>61</width>
           <height>31</height>
          </rect>
         </property>
@@ -475,7 +475,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>10</x>
           <y>20</y>
-          <width>221</width>
+          <width>171</width>
           <height>31</height>
          </rect>
         </property>
@@ -520,6 +520,19 @@ p, li { white-space: pre-wrap; }
         </property>
         <property name="text">
          <string>Save Image:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="horizontalSliderEnergyLabel">
+        <property name="geometry">
+         <rect>
+          <x>210</x>
+          <y>20</y>
+          <width>151</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Energy (eV): -22.8993</string>
         </property>
        </widget>
       </widget>
@@ -1315,7 +1328,7 @@ p, li { white-space: pre-wrap; }
          <number>5</number>
         </property>
         <property name="value">
-         <number>0</number>
+         <number>90</number>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -1334,7 +1347,7 @@ p, li { white-space: pre-wrap; }
          </rect>
         </property>
         <property name="text">
-         <string>Phi: 0</string>
+         <string>Phi: 90</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_24">
