--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -77,7 +77,7 @@ p, li { white-space: pre-wrap; }
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="0">
-         <widget class="GLViewWidget" name="openGLWidget">
+         <widget class="GLView" name="openGLWidget">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -329,7 +329,7 @@ p, li { white-space: pre-wrap; }
         <property name="geometry">
          <rect>
           <x>210</x>
-          <y>440</y>
+          <y>420</y>
           <width>131</width>
           <height>31</height>
          </rect>
@@ -342,7 +342,7 @@ p, li { white-space: pre-wrap; }
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>450</y>
+          <y>430</y>
           <width>181</width>
           <height>16</height>
          </rect>
@@ -373,13 +373,156 @@ p, li { white-space: pre-wrap; }
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>420</y>
+          <y>400</y>
           <width>301</width>
           <height>21</height>
          </rect>
         </property>
         <property name="text">
          <string>Set background brightness:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_28">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>480</y>
+          <width>301</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Labels:</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="labelCheckBoxSymbol">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>510</y>
+          <width>70</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Symbol</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="labelCheckBoxPosition">
+        <property name="geometry">
+         <rect>
+          <x>120</x>
+          <y>510</y>
+          <width>70</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Position</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="labelCheckBoxRadius">
+        <property name="geometry">
+         <rect>
+          <x>240</x>
+          <y>510</y>
+          <width>70</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Radius</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="fontComboBox">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>590</y>
+          <width>131</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="currentText">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_29">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>560</y>
+          <width>301</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Label Formatting:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_30">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>590</y>
+          <width>61</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Font:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_31">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>620</y>
+          <width>61</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Size:</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="sizeComboBox">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>620</y>
+          <width>71</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="currentText">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_32">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>650</y>
+          <width>91</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Offset axis:</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="offsetComboBox">
+        <property name="geometry">
+         <rect>
+          <x>80</x>
+          <y>650</y>
+          <width>51</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="currentText">
+         <string/>
         </property>
        </widget>
       </widget>
@@ -1573,9 +1716,9 @@ p, li { white-space: pre-wrap; }
  </widget>
  <customwidgets>
   <customwidget>
-   <class>GLViewWidget</class>
+   <class>GLView</class>
    <extends>QOpenGLWidget</extends>
-   <header>pyqtgraph.opengl</header>
+   <header>glview</header>
   </customwidget>
  </customwidgets>
  <resources/>
