--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -176,7 +176,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QTabWidget" name="propertiesWindow">
       <property name="minimumSize">
        <size>
-        <width>0</width>
+        <width>383</width>
         <height>0</height>
        </size>
       </property>
@@ -209,15 +209,29 @@ p, li { white-space: pre-wrap; }
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
-            <item row="0" column="0">
+            <item row="0" column="0" colspan="2">
              <widget class="QLabel" name="label">
               <property name="text">
                <string>Select or enter path of .xyz file:</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="1" column="0" colspan="2">
              <widget class="QLineEdit" name="openFileLineEdit"/>
+            </item>
+            <item row="1" column="2">
+             <widget class="QPushButton" name="openFileButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0" colspan="2">
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>Generate and execute Plato input file:</string>
+              </property>
+             </widget>
             </item>
             <item row="3" column="0">
              <widget class="QPushButton" name="generateInputFileButton">
@@ -226,21 +240,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
+            <item row="4" column="0" colspan="2">
              <widget class="QPushButton" name="executeButton">
               <property name="text">
                <string>Display Molecule and MOs</string>
               </property>
              </widget>
             </item>
-            <item row="5" column="0" colspan="2">
+            <item row="5" column="0" colspan="3">
              <widget class="QLabel" name="label_34">
               <property name="text">
                <string>Generate transmission input file and calculate transmission:</string>
               </property>
              </widget>
             </item>
-            <item row="6" column="0">
+            <item row="6" column="0" colspan="2">
              <widget class="QPushButton" name="generateTransInputFileButton">
               <property name="text">
                <string>Generate Transmission Input File</string>
@@ -254,28 +268,14 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
+            <item row="8" column="0" colspan="2">
              <widget class="QLabel" name="label_35">
               <property name="text">
                <string>Generate current input file and calculate current:</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>Generate and execute Plato input file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QPushButton" name="openFileButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="0">
+            <item row="9" column="0" colspan="2">
              <widget class="QPushButton" name="generateCurrInputFileButton">
               <property name="text">
                <string>Generate Current Input File</string>
@@ -289,21 +289,70 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="11" column="0" colspan="2">
+             <widget class="QLabel" name="label_33">
+              <property name="text">
+               <string>Generate current vs. bias graph:</string>
+              </property>
+             </widget>
+            </item>
             <item row="12" column="0">
+             <widget class="QLabel" name="label_37">
+              <property name="text">
+               <string>Bias min. (eV)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="1">
+             <widget class="QLineEdit" name="biasMinLineEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0">
+             <widget class="QLabel" name="label_44">
+              <property name="text">
+               <string>Bias max. (eV)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="1">
+             <widget class="QLineEdit" name="biasMaxLineEdit">
+              <property name="text">
+               <string>1</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="0">
+             <widget class="QLabel" name="label_45">
+              <property name="text">
+               <string>Steps</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="1">
+             <widget class="QLineEdit" name="stepsLineEdit">
+              <property name="text">
+               <string>5</string>
+              </property>
+             </widget>
+            </item>
+            <item row="16" column="0" colspan="2">
              <widget class="QLabel" name="label_4">
               <property name="text">
                <string>View and / or edit Plato input files:</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="0">
+            <item row="17" column="0" colspan="2">
              <widget class="QPushButton" name="switchToInputFileTabButton">
               <property name="text">
                <string>Switch to Input File tab</string>
               </property>
              </widget>
             </item>
-            <item row="11" column="0">
+            <item row="15" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrGraphButton">
               <property name="text">
                <string>Plot current vs. bias</string>
