--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -196,6 +196,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_7">
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -216,9 +222,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0" colspan="2">
-             <widget class="QLineEdit" name="openFileLineEdit"/>
-            </item>
             <item row="1" column="2">
              <widget class="QPushButton" name="openFileButton">
               <property name="text">
@@ -230,13 +233,6 @@ p, li { white-space: pre-wrap; }
              <widget class="QLabel" name="label_3">
               <property name="text">
                <string>Generate and execute Plato input file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QPushButton" name="generateInputFileButton">
-              <property name="text">
-               <string>Generate Input File</string>
               </property>
              </widget>
             </item>
@@ -261,14 +257,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
-             <widget class="QPushButton" name="executeTransButton">
-              <property name="text">
-               <string>Calcule transmission</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="0" colspan="2">
+            <item row="8" column="0" colspan="3">
              <widget class="QLabel" name="label_35">
               <property name="text">
                <string>Generate current input file and calculate current:</string>
@@ -279,13 +268,6 @@ p, li { white-space: pre-wrap; }
              <widget class="QPushButton" name="generateCurrInputFileButton">
               <property name="text">
                <string>Generate Current Input File</string>
-              </property>
-             </widget>
-            </item>
-            <item row="10" column="0">
-             <widget class="QPushButton" name="executeCurrButton">
-              <property name="text">
-               <string>Calculate current </string>
               </property>
              </widget>
             </item>
@@ -352,6 +334,30 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="1" column="0" colspan="2">
+             <widget class="QLineEdit" name="openFileLineEdit"/>
+            </item>
+            <item row="7" column="0" colspan="2">
+             <widget class="QPushButton" name="executeTransButton">
+              <property name="text">
+               <string>Calcule transmission</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" colspan="2">
+             <widget class="QPushButton" name="generateInputFileButton">
+              <property name="text">
+               <string>Generate Input File</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="0" colspan="2">
+             <widget class="QPushButton" name="executeCurrButton">
+              <property name="text">
+               <string>Calculate current </string>
+              </property>
+             </widget>
+            </item>
             <item row="15" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrGraphButton">
               <property name="text">
@@ -379,6 +385,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_16">
         <item row="7" column="1">
          <widget class="QScrollArea" name="scrollArea_6">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -491,6 +503,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_8">
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea_2">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -741,6 +759,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_10">
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea_3">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -791,6 +815,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_12">
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea_4">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -1214,6 +1244,12 @@ p, li { white-space: pre-wrap; }
        <layout class="QGridLayout" name="gridLayout_14">
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea_5">
+          <property name="minimumSize">
+           <size>
+            <width>359</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
