--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -187,7 +187,7 @@ p, li { white-space: pre-wrap; }
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="setupSettingsTab">
        <attribute name="title">
@@ -241,6 +241,9 @@ p, li { white-space: pre-wrap; }
             </item>
             <item row="4" column="0" colspan="2">
              <widget class="QPushButton" name="executeButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>Display Molecule and MOs</string>
               </property>
@@ -269,8 +272,11 @@ p, li { white-space: pre-wrap; }
             </item>
             <item row="7" column="0" colspan="2">
              <widget class="QPushButton" name="executeTransButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
-               <string>Calcule transmission</string>
+               <string>Calculate transmission</string>
               </property>
              </widget>
             </item>
@@ -325,6 +331,9 @@ p, li { white-space: pre-wrap; }
             </item>
             <item row="10" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>Calculate current </string>
               </property>
