--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -38,7 +38,7 @@
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>200</height>
+        <height>140</height>
        </size>
       </property>
       <property name="sizeIncrement">
@@ -69,7 +69,7 @@ p, li { white-space: pre-wrap; }
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="mainDisplayTab">
        <attribute name="title">
@@ -202,6 +202,9 @@ p, li { white-space: pre-wrap; }
             <height>0</height>
            </size>
           </property>
+          <property name="sizeAdjustPolicy">
+           <enum>QAbstractScrollArea::AdjustToContents</enum>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -215,6 +218,23 @@ p, li { white-space: pre-wrap; }
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
+            <item row="6" column="0">
+             <widget class="QLabel" name="label_47">
+              <property name="text">
+               <string>Gamma:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
+             <widget class="QLineEdit" name="gammaLineEdit">
+              <property name="autoFillBackground">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>0.1</string>
+              </property>
+             </widget>
+            </item>
             <item row="1" column="2">
              <widget class="QPushButton" name="openFileButton">
               <property name="text">
@@ -256,21 +276,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="8" column="0" colspan="3">
+            <item row="9" column="0" colspan="3">
              <widget class="QLabel" name="label_35">
               <property name="text">
                <string>Generate current input file and calculate current:</string>
               </property>
              </widget>
             </item>
-            <item row="6" column="0" colspan="2">
+            <item row="7" column="0" colspan="2">
              <widget class="QPushButton" name="generateTransInputFileButton">
               <property name="text">
                <string>Generate Transmission Input File</string>
               </property>
              </widget>
             </item>
-            <item row="7" column="0" colspan="2">
+            <item row="8" column="0" colspan="2">
              <widget class="QPushButton" name="executeTransButton">
               <property name="enabled">
                <bool>false</bool>
@@ -287,49 +307,49 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="9" column="0" colspan="2">
+            <item row="10" column="0" colspan="2">
              <widget class="QPushButton" name="generateCurrInputFileButton">
               <property name="text">
                <string>Generate Current Input File</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="0">
+            <item row="15" column="0">
              <widget class="QLabel" name="label_44">
               <property name="text">
                <string>Bias (eV) from 0 to:</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="1">
+            <item row="15" column="1">
              <widget class="QLineEdit" name="biasLineEdit">
               <property name="text">
                <string>1</string>
               </property>
              </widget>
             </item>
-            <item row="14" column="1">
+            <item row="16" column="1">
              <widget class="QLineEdit" name="stepsLineEdit">
               <property name="text">
                <string>5</string>
               </property>
              </widget>
             </item>
-            <item row="15" column="0" colspan="2">
+            <item row="17" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrGraphButton">
               <property name="text">
                <string>Plot current vs. bias</string>
               </property>
              </widget>
             </item>
-            <item row="11" column="0" colspan="2">
+            <item row="12" column="0" colspan="2">
              <widget class="QLabel" name="label_33">
               <property name="text">
                <string>Generate current vs. bias graph:</string>
               </property>
              </widget>
             </item>
-            <item row="10" column="0" colspan="2">
+            <item row="11" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrButton">
               <property name="enabled">
                <bool>false</bool>
@@ -339,38 +359,52 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="16" column="0" colspan="2">
+            <item row="18" column="0" colspan="2">
              <widget class="QLabel" name="label_4">
               <property name="text">
                <string>View and / or edit Plato input files:</string>
               </property>
              </widget>
             </item>
-            <item row="12" column="1">
+            <item row="14" column="1">
              <widget class="QLineEdit" name="referenceLineEdit">
               <property name="text">
                <string>0</string>
               </property>
              </widget>
             </item>
-            <item row="17" column="0" colspan="2">
+            <item row="19" column="0" colspan="2">
              <widget class="QPushButton" name="switchToInputFileTabButton">
               <property name="text">
                <string>Switch to Input File tab</string>
               </property>
              </widget>
             </item>
-            <item row="14" column="0">
+            <item row="16" column="0">
              <widget class="QLabel" name="label_45">
               <property name="text">
                <string>Steps</string>
               </property>
              </widget>
             </item>
-            <item row="12" column="0">
+            <item row="14" column="0">
              <widget class="QLabel" name="label_37">
               <property name="text">
                <string>Reference Potential (eV)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0">
+             <widget class="QLabel" name="label_48">
+              <property name="text">
+               <string>Gamma</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="1">
+             <widget class="QLineEdit" name="gammaLineEdit2">
+              <property name="text">
+               <string>0.1</string>
               </property>
              </widget>
             </item>
